# app/Models/Order.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Order extends Model
+{
+    use HasFactory;
+    protected $fillable = [
+        'user_id',
+        'username',
+        'character_name',
+        'payment',
+        'total_price'
+    ];
+
+    public function items()
+    {
+        return $this->hasMany(OrderItem::class);
+    }
+}
