# storage/api-docs/api-docs.json
@@ -33,11 +33,11 @@
                                 "properties": {
                                     "ucp": {
                                         "type": "string",
-                                        "example": "Noverra"
+                                        "example": "admin"
                                     },
                                     "password": {
                                         "type": "string",
-                                        "example": "rahasia123"
+                                        "example": "admin123"
                                     }
                                 },
                                 "type": "object"
@@ -68,7 +68,7 @@
                                                 },
                                                 "username": {
                                                     "type": "string",
-                                                    "example": "Noverra"
+                                                    "example": "admin"
                                                 }
                                             },
                                             "type": "object"
@@ -135,33 +135,88 @@
                                             "example": "success"
                                         },
                                         "data": {
-                                            "properties": {
-                                                "id": {
-                                                    "type": "integer",
-                                                    "example": 1
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "ID": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "Character": {
+                                                        "type": "string",
+                                                        "example": "Antonio_Rudriger"
+                                                    },
+                                                    "Skin": {
+                                                        "type": "integer",
+                                                        "example": 292
+                                                    },
+                                                    "Level": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "PlayingHours": {
+                                                        "type": "integer",
+                                                        "example": 112
+                                                    },
+                                                    "Exp": {
+                                                        "type": "integer",
+                                                        "example": 8
+                                                    },
+                                                    "Money": {
+                                                        "type": "integer",
+                                                        "example": 50000
+                                                    },
+                                                    "Faction": {
+                                                        "type": "integer",
+                                                        "example": 32
+                                                    },
+                                                    "FactionRank": {
+                                                        "type": "integer",
+                                                        "example": 5
+                                                    },
+                                                    "BankAccount": {
+                                                        "type": "array",
+                                                        "items": {
+                                                            "properties": {
+                                                                "AccNumber": {
+                                                                    "type": "integer",
+                                                                    "example": 1732
+                                                                },
+                                                                "AccName": {
+                                                                    "type": "string",
+                                                                    "example": "Antonio"
+                                                                },
+                                                                "Balance": {
+                                                                    "type": "integer",
+                                                                    "example": 30000000
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        }
+                                                    },
+                                                    "Cars": {
+                                                        "type": "array",
+                                                        "items": {
+                                                            "properties": {
+                                                                "carModel": {
+                                                                    "type": "integer",
+                                                                    "example": 521
+                                                                },
+                                                                "carPlate": {
+                                                                    "type": "string",
+                                                                    "example": "No Plate"
+                                                                },
+                                                                "carPlate_Time1": {
+                                                                    "type": "string",
+                                                                    "example": "EXPIRED"
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        }
+                                                    }
                                                 },
-                                                "Username": {
-                                                    "type": "string",
-                                                    "example": "Aziz"
-                                                },
-                                                "CharName": {
-                                                    "type": "string",
-                                                    "example": "Aziz_Martinez"
-                                                },
-                                                "Level": {
-                                                    "type": "integer",
-                                                    "example": 5
-                                                },
-                                                "Money": {
-                                                    "type": "integer",
-                                                    "example": 2500
-                                                },
-                                                "Job": {
-                                                    "type": "string",
-                                                    "example": "Trucker"
-                                                }
-                                            },
-                                            "type": "object"
+                                                "type": "object"
+                                            }
                                         }
                                     },
                                     "type": "object"
@@ -351,6 +406,217 @@
                     }
                 }
             }
+        },
+        "/api/orders": {
+            "post": {
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Buat order baru",
+                "operationId": "d690d6834318e9b064df441e854de8b9",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "username",
+                                    "character_name",
+                                    "payment",
+                                    "items"
+                                ],
+                                "properties": {
+                                    "username": {
+                                        "type": "string",
+                                        "example": "AhmadYGG"
+                                    },
+                                    "character_name": {
+                                        "type": "string",
+                                        "example": "Antonio_Rudriger"
+                                    },
+                                    "payment": {
+                                        "type": "string",
+                                        "example": "OVO"
+                                    },
+                                    "items": {
+                                        "type": "array",
+                                        "items": {
+                                            "properties": {
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "PremiumPackage"
+                                                },
+                                                "qty": {
+                                                    "type": "integer",
+                                                    "example": 2
+                                                },
+                                                "price": {
+                                                    "type": "number",
+                                                    "example": 25000
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Order berhasil dibuat",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Order created successfully"
+                                        },
+                                        "order_id": {
+                                            "type": "integer",
+                                            "example": 10
+                                        },
+                                        "total": {
+                                            "type": "number",
+                                            "example": 50000
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/orders/{id}": {
+            "get": {
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Lihat detail order",
+                "operationId": "c29621029e70f65247909d3e09031118",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Order ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Detail order dengan item",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 10
+                                        },
+                                        "username": {
+                                            "type": "string",
+                                            "example": "AhmadYGG"
+                                        },
+                                        "character_name": {
+                                            "type": "string",
+                                            "example": "Antonio_Rudriger"
+                                        },
+                                        "payment": {
+                                            "type": "string",
+                                            "example": "OVO"
+                                        },
+                                        "total_price": {
+                                            "type": "number",
+                                            "example": 50000
+                                        },
+                                        "items": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "name": {
+                                                        "type": "string",
+                                                        "example": "PremiumPackage"
+                                                    },
+                                                    "qty": {
+                                                        "type": "integer",
+                                                        "example": 2
+                                                    },
+                                                    "price": {
+                                                        "type": "number",
+                                                        "example": 25000
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Order not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/orders/{id}/receipt": {
+            "get": {
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Download order receipt (PDF)",
+                "operationId": "2c99f943ce45de715b7fe976dd709425",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Order ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "File PDF receipt",
+                        "content": {
+                            "application/pdf": {}
+                        }
+                    },
+                    "404": {
+                        "description": "Order not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "tags": [
@@ -369,6 +635,10 @@
         {
             "name": "Music",
             "description": "Music"
+        },
+        {
+            "name": "Orders",
+            "description": "Orders"
         }
     ]
 }
